<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.openmrs.module</groupId>
	<artifactId>patientflags</artifactId>
	<version>3.0.8-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Patient Flags Module</name>
	<description>Parent project for Patient Flags Module</description>

	<url>http://openmrs.org</url>

	<scm>
		<connection>scm:git:git@github.com:openmrs/openmrs-module-patientflags</connection>
		<developerConnection>scm:git:git@github.com:openmrs/openmrs-module-patientflags</developerConnection>
		<url>https://github.com/openmrs/openmrs-module-patientflags/</url>
	  <tag>HEAD</tag>
  </scm>

	<distributionManagement>
		<repository>
			<id>openmrs-repo-modules</id>
			<name>Modules</name>
			<url>https://mavenrepo.openmrs.org/modules</url>
		</repository>
		<snapshotRepository>
			<id>openmrs-repo-snapshots</id>
			<name>OpenMRS Snapshots</name>
			<url>https://mavenrepo.openmrs.org/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<modules>
		<module>api</module>
		<module>api-metadata</module>
		<module>omod</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openMRSVersion}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.web</groupId>
				<artifactId>openmrs-web</artifactId>
				<version>${openMRSVersion}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openMRSVersion}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.web</groupId>
				<artifactId>openmrs-web</artifactId>
				<version>${openMRSVersion}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.test</groupId>
				<artifactId>openmrs-test</artifactId>
				<version>${openMRSVersion}</version>
				<type>pom</type>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>webservices.rest-omod</artifactId>
				<version>${webservices.rest-omod.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>webservices.rest-omod-common</artifactId>
				<version>${webservices.rest-omod.version}</version>
				<classifier>tests</classifier>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>uiframework-api</artifactId>
				<version>${uiframeworkVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>metadatadeploy-api</artifactId>
				<version>${metadatadeployVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>metadatasharing-api</artifactId>
				<version>${metadatasharingVersion}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>legacyui-omod</artifactId>
				<version>${legacyuiVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>legacyui-api</artifactId>
				<version>${legacyuiVersion}</version>
				<scope>provided</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<!-- default property values, required for eclipse build path configuration -->
	<properties>
		<openMRSVersion>2.2.0</openMRSVersion>
		<openMRSMinorVersion>2.0</openMRSMinorVersion>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<uiframeworkVersion>3.11.0</uiframeworkVersion>
		<metadatadeployVersion>1.8.1</metadatadeployVersion>
		<metadatasharingVersion>1.2.2</metadatasharingVersion>
		<webservices.rest-omod.version>2.40.0</webservices.rest-omod.version>
		<legacyuiVersion>1.16.0</legacyuiVersion>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<target>1.8</target>
						<source>1.8</source>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.openmrs.maven.plugins</groupId>
					<artifactId>maven-openmrs-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<!-- different profiles for building/testing against different version of openmrs -->
	<profiles>

		<profile>
			<id>openmrs-1.9</id>

		    <properties>
				<openMRSVersion>1.9.9</openMRSVersion>
				<openMRSMinorVersion>1.9</openMRSMinorVersion>

			</properties>
		</profile>

		<profile>
			<id>openmrs-1.10</id>

		    <properties>
				<openMRSVersion>1.10.2</openMRSVersion>
				<openMRSMinorVersion>1.10</openMRSMinorVersion>
			</properties>
		</profile>

		<profile>
			<id>openmrs-1.11</id>

		    <properties>
				<openMRSVersion>1.11.7</openMRSVersion>
				<openMRSMinorVersion>1.11</openMRSMinorVersion>
			</properties>
		</profile>

		<profile>
			<id>Java 17</id>
			<activation>
				<jdk>17</jdk>
			</activation>

			<dependencies>
				<dependency>
					<groupId>com.thoughtworks.xstream</groupId>
					<artifactId>xstream</artifactId>
					<version>1.4.18</version>
					<scope>provided</scope>
				</dependency>
			</dependencies>

			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.22.1</version>
						<configuration>
							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

	</profiles>
</project>
